# heart_eco

./: .env  App.js  Cargo.toml  README.md  app.json  package-lock.json  package.json  price_list.txt  temp_build.bat
android/: settings.gradle
android/app/: _BUCK  build.gradle
android/app/src/debug/java/com/customerserviceapp/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/customerserviceapp/: MainActivity.java  MainApplication.java
android/app/src/main/java/com/customerserviceapp/newarchitecture/: MainApplicationReactNativeHost.java
android/app/src/main/java/com/customerserviceapp/newarchitecture/components/: MainComponentsRegistry.java
android/app/src/main/jni/: CMakeLists.txt  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/CustomerServiceApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/CustomerServiceApp.xcodeproj/: project.pbxproj
ios/CustomerServiceApp.xcodeproj/xcshareddata/xcschemes/: CustomerServiceApp.xcscheme
ios/CustomerServiceAppTests/: CustomerServiceAppTests.m
migrations/: 20250505211012_create_wood_planks_tables.sql
src/: lib.rs  main.rs
src/ai/: mod.rs
src/config/: config.rs  mod.rs
src/handlers/: mod.rs
src/models/: cart.rs  mod.rs  user.rs  wood_plank.rs
src/screens/: HomeScreen.js  LoginScreen.js
src/services/: mod.rs
src/utils/: error.rs  file.rs  mod.rs  seeder.rs
(+1 files in other folders)
