[package]
name = "woodplanks_ecommerce"
version = "0.1.0"
edition = "2024"
description = "E-commerce application for recycled wood planks with AI assistant"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Web Framework (will be used later)
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json", "bigdecimal"] }
tokio = { version = "1.35.1", features = ["full"] }
# Use the specific version supported by sqlx with serde feature
bigdecimal = { version = "0.3.1", features = ["serde"] }
dotenv = "0.15.0"

# Security (will be used later)
rust-argon2 = "1.0.0"
rand = "0.8.5"
validator = { version = "0.16.1", features = ["derive"] }

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Utilities
uuid = { version = "1.6.1", features = ["v4", "serde"] }
log = "0.4.20"
env_logger = "0.10.1"
thiserror = "1.0.50"
anyhow = "1.0.77"
chrono = { version = "0.4.31", features = ["serde"] }

[dev-dependencies]
actix-test = "0.1.1"
mockall = "0.11.4"

# Define the bin targets
[[bin]]
name = "seed"
path = "src/bin/seed.rs"
